# adventofcode2023

./: .gitignore  Cargo.toml  README.md  benchmarks.txt  day-01.bench.txt  dhat-heap.json  justfile
benchmark-results/: day-01.bench.txt  day-02.bench.txt
daily-template/: Cargo.toml
daily-template/src/: part1.rs
day-01/: Cargo.toml
day-01/benches/: benchmarks.rs
day-01/src/: custom_error.rs  part1.rs  part2.rs  part2_biscardi.rs
day-02/: Cargo.toml
day-02/benches/: benchmarks.rs
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml  input1.txt
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml  input2.txt
day-05/benches/: benchmarks.rs
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks.rs
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks.rs
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmarks.rs
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks.rs
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml
day-12/benches/: benchmarks.rs
day-12/src/: part1.rs  part2.rs
day-13/: Cargo.toml
day-13/src/: part1.rs  part2.rs
day-14/: Cargo.toml
day-14/src/: part1.rs  part2.rs
day-15/: Cargo.toml
day-15/src/: part1.rs  part2.rs
day-16/: Cargo.toml
day-16/benches/: benchmarks.rs
day-16/src/: part1.rs  part2.rs
day-17/: Cargo.toml
day-17/benches/: benchmarks.rs
day-17/src/: part1.rs  part2.rs
day-18/: Cargo.toml
day-18/benches/: benchmarks.rs
day-18/src/: part1.rs  part2.rs
day-19/: Cargo.toml
day-19/benches/: benchmarks.rs
day-19/src/: lib.rs  part1.rs  part2.rs  part2_dfs.rs
src/: main.rs
