[workspace]
resolver = "2"
members = ["day-*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
dhat = "0.3.2"
miette = "5.10.0"
thiserror = "1.0.50"
divan = "0.1.5"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1