[workspace]
resolver = "2"
members = ["day-*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
ahash = "0.8.7"
dhat = "0.3.2"
divan = "0.1.5"
indexmap = "2.1.0"
itertools = "0.12.0"
miette = "5.10.0"
rstest = "0.18.2"
seahash = "4.1.0"
fxhash = "0.2.1"
test-log = "0.2.14"
thiserror = "1.0.50"
optick = "1.3.4"
phf = { version = "0.11", features = ["macros"] }
num = "0.4.1"

[profile.dhat]
inherits = "release"
debug = 1