[package]
name = "day-18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette.workspace = true
thiserror.workspace = true
dhat.workspace = true
# itertools.workspace = true
# nom.workspace = true
# tracing.workspace = true
# tracing-subscriber.workspace = true
# nom-supreme.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-18-bench"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
